--- a/dashboard/scorePolymer/elements/scoreElement.html
+++ b/dashboard/scorePolymer/elements/scoreElement.html
@@ -1,5 +1,7 @@
-<link rel="import" href="../../../bower_components/polymer/polymer-element.html">
-<dom-module id="basic-polymer">
+<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../../bower_components/paper-styles/paper-styles.html">
+
+<dom-module id="score-element">
     <template>
         <style>
             #btnSubtract, #btnAdd{
@@ -15,8 +17,8 @@
             }
         </style>
 
-    <paper-button raised onclick="subtract()" id="btnSubtract">-1</paper-button>
-    <paper-button raised onclick="add()" id="btnAdd">+1</paper-button>
+    <paper-button raised on-tap="subtract" id="btnSubtract">-1</paper-button>
+    <paper-button raised on-tap="add" id="btnAdd">+1</paper-button>
 
     </template>
 
