--- a/dashboard/scorePolymer/scorePolymer.html
+++ b/dashboard/scorePolymer/scorePolymer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-	<link rel="import" href="elements/scorePolymer.html">
+	<link rel="import" href="elements/scoreElement.html">
 </head>
 <body>
     <div id="container">
